Made themes path expicit.

--- a/config.toml
+++ b/config.toml
@@ -39,7 +39,8 @@ dataDir = "/home/luka/blog/data"
 layoutDir = "/home/luka/blog/layouts"
 publishDir = "/home/luka/blog/public"
 staticDir = "/home/luka/blog/static"
-logFile = "/home/luka/caddy/hugo.log"
+themesDir = "/home/luka/blog/themes"
+logFile = "/home/luka/hugo.log"
 
 googleAnalytics = ""
 editor = ""
